<resources>
    <string name="app_name"       >The Lavation Gerenciator</string>
    <string name="action_settings">Settings</string>

    <!-- Login -->
    <string name="label_login"    >Login</string>
    <string name="input_login"    >Login</string>

    <!-- Menu -->
    <string name="input_senha"    >Senha</string>
    <string name="bt_entrar"      >Entrar</string>
    <string name="bt_cliente"     >Clientes</string>

    <!-- Tela de cadastro de cliente -->
    <string name="txt_cliente"    >Cadastrar Cliente</string>
    <string name="nome_cln"       >Nome</string>
    <string name="email_cln"      >E-mail</string>
    <string name="tel_cln"        >Telefone</string>
    <string name="veiculo_cln"    >Veículo</string>
    <string name="bt_cadcliente"  >Salvar</string>

    <!-- Tela de Cadastro de Servicos -->
    <string name="txt_Servico"    >Cadastrar Servico</string>
    <string name="servico_nome"   >Nome</string>
    <string name="servico_respon" >Responsável</string>
    <string name="servico_duracao">Duração</string>
    <string name="servico_valor"  >Valor</string>
    <string name="bt_cadservico"  >Salvar</string>

    <!-- Tela Listar Cliente -->
    <string name="bt_cadastrarcln">Cadastrar Novo Cliente</string>

    <!-- Tela Listar Servicos -->
    <string name="bt_cadServico"  >Cadastrar Novo Serviço</string>
</resources>
